<resources>
    <string name="app_name">MVP</string>
    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="button_password_recovery_text">Восстановить</string>
    <string name="have_account_button_text">Вход</string>
    <string name="have_account_text_view_text">Есть аккаунт</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_edit_text">Логин</string>
    <string name="login_edit_text_hint">Введите логин</string>
    <string name="login_failed">Login failed</string>
    <string name="not_have_account_text">Нет аккаунта?</string>
    <string name="not_remember_password_text">Забыли пароль?</string>
    <string name="password_confirm_edit_text_hint">Подтвердите пароль</string>
    <string name="password_edit_text">Пароль</string>
    <string name="password_edit_text_hint">Введите пароль</string>
    <string name="prompt_password">Password</string>
    <string name="registration_button_text">Зарегистрироваться</string>
    <string name="authorization_heading_text_view_text">Авторизация</string>
    <string name="tv_registration">Регистрация</string>
    <string name="welcome">Welcome!</string>



</resources>