<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.activity_main">

    <TextView
        android:id="@+id/authorization_heading_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authorization_heading_text_view_margin_top"
        android:text="@string/tv_registration"
        android:textSize="@dimen/authorization_heading_text_view_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/authorization_heading_text_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_layout"
                android:layout_width="@dimen/login_text_input_layout_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_text_input_layout_margin_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.7">

                <EditText
                    android:id="@+id/login_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:gravity="start"
                    android:hint="@string/login_edit_text_hint"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input_layout"
                android:layout_width="@dimen/login_text_input_layout_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/password_text_input_layout_margin_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_layout"
                app:layout_constraintWidth_percent="0.7">

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:gravity="start"
                    android:hint="@string/password_edit_text_hint"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_confirm_text_input_layout"
                android:layout_width="@dimen/password_confirm_text_input_layout_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/password_confirm_text_input_layout_margin_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout"
                app:layout_constraintWidth_percent="0.7">

                <EditText
                    android:id="@+id/password_confirm_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:gravity="start"
                    android:hint="@string/password_confirm_edit_text_hint"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registration_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="@dimen/registration_button_width"
                android:layout_height="@dimen/registration_button_height"
                android:layout_marginTop="@dimen/registration_button_margin_top"
                android:elevation="@dimen/registration_button_elevation"
                android:text="@string/registration_button_text"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_confirm_text_input_layout"
                app:layout_constraintWidth_percent="0.7" />

            <LinearLayout
                android:id="@+id/have_account_layout"
                android:layout_width="@dimen/have_account_layout_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/have_account_layout_margin_top"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registration_button"
                app:layout_constraintWidth_percent="1.0">

                <TextView
                    android:id="@+id/have_account_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_account_text_view_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/have_account_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_account_button_text"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>